--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing-app
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=1988
 
 spring.jpa.show-sql=false
 
@@ -8,5 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=create
 
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
